Got to a clear in client app. Backend still in progress.

--- a/MobileApp/MobileApp/MobileApp.csproj
+++ b/MobileApp/MobileApp/MobileApp.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="ReceivedOfferTakeAction.xaml.cs">
+      <DependentUpon>ReceivedOfferTakeAction.xaml</DependentUpon>
+    </Compile>
     <Compile Update="SubmittedQueryOffers.xaml.cs">
       <DependentUpon>SubmittedQueryOffers.xaml</DependentUpon>
     </Compile>
