--- a/MobileApp.Backend/MobileApp.Backend.csproj
+++ b/MobileApp.Backend/MobileApp.Backend.csproj
@@ -17,7 +17,7 @@
     <AssemblyName>MobileApp.Backend</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -174,9 +174,9 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="DataObjects\Query.cs" />
     <Compile Include="DataObjects\User.cs" />
-    <Compile Include="Migrations\201910100727214_Initial.cs" />
-    <Compile Include="Migrations\201910100727214_Initial.Designer.cs">
-      <DependentUpon>201910100727214_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201910221310509_Initial.cs" />
+    <Compile Include="Migrations\201910221310509_Initial.Designer.cs">
+      <DependentUpon>201910221310509_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\UserDomainManager.cs" />
     <Compile Include="Models\UserDBEntity.cs" />
@@ -205,8 +205,8 @@
     <None Include="Properties\PublishProfiles\IonMobileAppBackend - Web Deploy.pubxml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201910100727214_Initial.resx">
-      <DependentUpon>201910100727214_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201910221310509_Initial.resx">
+      <DependentUpon>201910221310509_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -227,7 +227,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>62598</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:62598/</IISUrl>
+          <IISUrl>http://localhost/MobileAppBackend</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
