--- a/MobileApp/MobileApp.UWP/MobileApp.UWP.csproj
+++ b/MobileApp/MobileApp.UWP/MobileApp.UWP.csproj
@@ -152,6 +152,9 @@
     <PackageReference Include="Xamarin.Forms.GoogleMaps">
       <Version>3.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Forms.GoogleMaps.Bindings">
+      <Version>2.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MobileApp\MobileApp.csproj">
