--- a/MobileApp/MobileApp.iOS/MobileApp.iOS.csproj
+++ b/MobileApp/MobileApp.iOS/MobileApp.iOS.csproj
@@ -133,6 +133,9 @@
     <PackageReference Include="Xamarin.Forms.GoogleMaps">
       <Version>3.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Forms.GoogleMaps.Bindings">
+      <Version>2.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
