--- a/MobileApp/MobileApp.Android/Properties/AndroidManifest.xml
+++ b/MobileApp/MobileApp.Android/Properties/AndroidManifest.xml
@@ -1,12 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.ionbalan.wayfapp" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.ionbalan.wayfapp" android:installLocation="internalOnly">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<application android:label="WAYF App" android:icon="@drawable/AppIcon" android:name="android.support.multidex.MultiDexApplication">
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCoMR5yZTzbEkEj_uslW2a1olxaY4zDltI" />
-    <uses-library
-      android:name="org.apache.http.legacy"
-      android:required="false" />
+		<uses-library android:name="org.apache.http.legacy" android:required="false" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
